fileadmin/templates/sass/styles.scss
/* ... */
/* End specific stlye for smaller PCs */


/*
Begin specific stlye for small screens.
This targets smartphones and small tablets in portrait mode
*/
@media only screen and (max-width: 799px) {
	.test {
		background: red;
	}
	html {
		height: auto;
		overflow: auto;
		font-size: $smallscreen-root-font-size;
	}
	body {
		height: auto;
		position: static;
		overflow: auto;
	}
	#index h1 {
		@include font-m;
	}
	.page {
		position: static !important;
		@include box-shadow(none);
		width: 100%;
		height: auto;
		overflow: auto;
		padding: 0 $smallscreen-page-padding-left;
		margin-left: 0 !important;
		border-left: 0;
		&:not(.open) {
			display: none;
		}
		.logo, .main-nav {
			display: none;
		}
		.sub-nav {
			position: static !important;
			padding-top: $smallscreen-content-offset-top !important;
			@include font-l;
			&>a {
				font-size: inherit !important;
			}
		}
		.scroll {
			padding: 0;
			position: static;
			height: auto;
			overflow: auto;
			width: 100% !important;
			#stack-area {
				width: 100% !important;
				padding: 0;
				margin: 0 !important;
				img {
					height: 15rem !important;
				}
			}
			section, article {
				&:first-of-type {
					padding-top: $smallscreen-content-offset-top;
				}
				p {
					margin-left: 0; margin-right: 0;
					width: 100%;
					float: none;
					margin-bottom: 1.53rem;
					img {
						width: auto;
						max-width: 100%;
					}
				}
				aside {
					@include font-m;
					width: 100%;
					&>*:last-child {
						margin-bottom: 0;
					}
				}
				.teachers-list-big, .teachers-list-small, .students-list-small, .alumni-list {
					margin-left: 0; margin-right: 0;
					width: 100%;
					float: none;
					margin-bottom: 1.53rem;
					@include font-m;
					li {
						width: 100%;
						margin: 0;
						img {
							width: 50%;
						}
					}
				}
				.teachers-list-small {
					height: 12.5rem;
					&.open {
						height: auto;
					}
				}

				a#show-all-teachers, a#show-alumni {
					@include font-m;
					display: block;
					margin-bottom: 1.53rem;
				}
				.image-group {
					height: auto !important;
					img {
						display: block;
						position: static;
						width: auto !important;
						max-width: 100%;
						margin-bottom: 1.53rem;
					}
				}
				.small-left, .small-right {
					width: 95%;
					@include font-m;
					float: none;
					padding-right: 0;
					p {
						margin-bottom: 1.53rem;
					}
				}
				.news-meta {
					@include font-m;
				}
			}

			#stack-nav {
				display: none;
			}
		}
	}

	.project-details {
		&.open {
			position: fixed;
			left: 0;
			top: $smallscreen-content-offset-top - 1rem;
			width: 100%;
			height: calc(100% - 4rem);
		}
		&:not(.open) {
			display: none;
		}
		#detail-slideshow li {
			&.html5 {
				padding: 0 30px; // make sure next/prev links are clickable
			}
		}
		#project-words {
			#project-description {
				margin: 3rem 0 0 0 !important;
				width: 100% !important;
				max-width: 100% !important;
				float: none;
			}
			#project-meta {
				@include font-m;
				margin: 3rem 0 1rem 0 !important;
				float: none;
				width: 100%;
			}
		}
	}
	#smallscreen-menu {
		background: white;
		display: block;
		position: fixed;
		z-index: 2000;
		top:0;left:0;
		width: 100%;
		@include font-m;
		.bar {
			position: relative;
			padding: $smallscreen-page-padding-left;
			min-height: 5rem;
			@include box-shadow(rgba(0,0,0,0.4) 0 0 8px);
			h1 {
				position: absolute;
				right: $smallscreen-page-padding-left;
				top: 50%;
				height: 3.6rem;
				margin-top: -1.8rem;
				@include font-m;
				white-space: nowrap;
			}
			#btn-smallscreen-menu {
				text-align: left;
				display: block;
				height: 3rem;
				position: absolute;
				left: $smallscreen-page-padding-left;
				top: 50%;
				margin-top: -1.5rem;
				padding-left: 2rem;
				background: transparent url(../img-ui/hamburger-3.png) no-repeat left center;
				@include font-l;
				line-height: 3rem;
			}
		}
		nav {
			height: 0;
			overflow: hidden;
			@include transition(height 0.3s ease-in-out);
			li {
				min-height: 5rem;
				border-bottom: 1px solid $accent-color-1;
				color: $accent-color-1;
				@include font-l;
				line-height: 4.9rem;
				overflow: hidden;
				a {
					padding-left: $smallscreen-page-padding-left+2rem;
					display: block;
					width: 100%; height: 100%;
					&:active {
						background: $accent-color-1;
						color: white;
					}
				}
			}
			&.active {
				height: 5rem*3;
			}
		}
	}
}
/* End specific styles for small screens */

/* Begin specific styles for touch screens */
body.touch-device {
	// Next/prev image links always visible on touch devices b/c there is no real :hover state
	#detail-slideshow {
			.cycle-next, .cycle-prev {
				opacity: 1;
			}
	}
	// On Touch devices, we completely disable the stack view. Hence, no controls
	#stack-nav .show-as {
		display: none;
	}
}
/* End specific styles for touch screens */

/* Start specific styles for Internet Explorer */
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
	.page#news.translate-less.right {
		left: 100% - 2%*3;
	}
	.page#projects.translate-less.right {
		left: 100% - 2%*2;
	}
	.page#index.translate-less.right {
		left: 100% - 2%;
	}
}


/* Begin helpers */
.display-none {
	display: none;
}
/* End helpers */

